--- a/products/Women/all_together_html.html
+++ b/products/Women/all_together_html.html
@@ -88,28 +88,36 @@
             <button onclick="addToCart('Accessories')">Add to Cart</button>
         </div>
         <div class="category">
+            <a href="../../products/Women/pd-sserial/w_4.html">
             <img src="https://i.postimg.cc/52TVYDxn/558b30f3-9f25-4d44-b9af-b99aaa3d0559.jpg" alt="Girls Kids Sandal">
+            </a>
             <h4>Women's Slipper</h4>
             <p>Mauch Women's Slipper</p><br>
             <span class="new-price">Tk1699</span>
             <button onclick="addToCart('Girls Kids Sandal')">Add to Cart</button>
         </div>
         <div class="category">
+            <a href="../../products/Women/pd-sserial/w_5.html">
             <img src="https://i.postimg.cc/kGBsbYMR/b9a8c6dd-a87b-48cb-aa96-455d79df5847.jpg" alt="Air Jordan 4">
+            </a>
             <h4>Women's Flat Sandal</h4>
             <p>Nino Rossi Women's Flat Sandal</p><br>
             <span class="new-price">Tk1290</span>
             <button onclick="addToCart('Air Jordan 4')">Add to Cart</button>
         </div>
         <div class="category">
+            <a href="../../products/Women/pd-sserial/w_6.html">
             <img src="https://i.postimg.cc/QC1KcTP8/3f43f303-1024-403e-90eb-f680cbcfbacc.jpg" alt="Lacoste">
+            </a>
             <h4>Women's Pump</h4>
             <p>Nino Rossi Women's Pump</p><br>
             <span class="new-price">Tk2290</span>
             <button onclick="addToCart('Lacoste Black & White')">Add to Cart</button>
         </div>
         <div class="category">
+            <a href="../../products/Women/pd-sserial/w_7.html">
             <img src="https://i.postimg.cc/4NvBg7dC/dd7af4ee-399e-4405-8666-0757692a93af.jpg" alt="Air Jordan 4 White">
+            </a>
             <h4>Women's Canvas</h4>
             <p>Sprint Women's Canvas</p><br>
             <span class="new-price">Tk3499</span>
@@ -117,14 +125,18 @@
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
+            <a href="../../products/Women/pd-sserial/w_8.html">
             <img src="https://i.postimg.cc/cHW1dBPB/0870000107546-2.jpg" alt="Air Jordan 4 White">
+            </a>
             <h4>Women's Ankle</h4>
             <p>Moochie Women's Ankle Strap Heel</p><br>
             <span class="new-price">Tk1,442</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
         <div class="category">
+            <a href="../../products/Women/pd-sserial/w_9.html">
             <img src="https://i.postimg.cc/9MqHYbQp/c16138e2-7745-462e-880e-545987fe4c1c.jpg" alt="Men's Shoes">
+            </a>
             <h3>Women's Strap Heel</h3>
             <p>Moochie Women's Ankle Strap Heel</p><br><br>
             <span class="new-price">Tk3499</span>
