--- a/products/Women/pd-sserial/w_8.html
+++ b/products/Women/pd-sserial/w_8.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Page</title>
-  <link rel="stylesheet" href="/Home/index.css">
-  <link rel="stylesheet" href="/products/products.css">
+  <link rel="stylesheet" href="../../../Home/index.css">
+  <link rel="stylesheet" href="../../../products/products.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
     <header>
       <nav>
         <div class="nav-left">
-          <img src="/asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
+          <img src="../../../asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
           <ul>
             <li><a href="#"> Mega Deals</a></li>
@@ -52,7 +52,7 @@
     <div class="container">
       <!-- Left: Product Images -->
       <div class="product-images">
-        <img src="" alt="Main Product">
+        <img src="https://i.postimg.cc/cHW1dBPB/0870000107546-2.jpg" alt="Main Product">
       </div>
 
       <!-- Right: Product Details -->
