--- a/index.html
+++ b/index.html
@@ -11,42 +11,82 @@
 <body>
   <div class="profile-overlay" id="profileOverlay"></div>
   <div class="profile-sidebar" id="profileSidebar">
-    <header>
-      <nav>
-        <div class="nav-left">
-          <img src="asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
-
-          <ul>
-            <li><a href="products/Mega Deals/all_html.html"> Mega Deals</a></li>
-            <li><a href="products/man/all_html.html">Men</a></li>
-            <li><a href="products/Women/all_together_html.html">Women</a></li>
-            <li><a href="products/kids/all_together_html.html">kids</a></li>
-            <li><a href="products/sports/all_together_html.html ">sports</a></li>
-            <li><a href="#">Travel</a></li>
-            <li><a href="products/Accessories/all_together_html.html">Accessories</a></li>
-            <li><a href="auth/contract.html">Contact</a></li>
-          </ul>
-        </div>
-        <!-- Search Form -->
-        <form class="search-form" onsubmit="return false;">
-          <input type="text" placeholder="Search products...">
-          <button type="submit">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </button>
-        </form>
+   <!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
 
-        <!-- Font Awesome CDN (add inside <head>) -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+<header>
+  <nav>
+    <div class="nav-left">
+      <img src="asstes/icons/download.png" alt="ShoeKarT Logo" class="logo" style="height:100px; width:auto;">
 
-        <div class="nav-right">
-          <a href="auth/login.html"><span class="fa-solid fa-cart-shopping"></span></a>
-          <a href="auth/sin_in.html">Sign In</a>
-          <!-- <a href="/auth/profile.html"><i class="fa-solid fa-user"></i></a>  -->
-          <a href="#" id="profileTrigger"><i class="fa-solid fa-user"></i></a>
-        </div>
-      </nav>
-    </header>
+      <ul>
+        <li><a href="products/Mega Deals/all_html.html"> Mega Deals</a></li>
+        <li><a href="products/man/all_html.html">Men</a></li>
+        <li><a href="products/Women/all_together_html.html">Women</a></li>
+        <li><a href="products/kids/all_together_html.html">kids</a></li>
+        <li><a href="products/sports/all_together_html.html">sports</a></li>
+        <li><a href="#">Travel</a></li>
+        <li><a href="products/Accessories/all_together_html.html">Accessories</a></li>
+      </ul>
+    </div>
+
+    <!-- Search Form -->
+    <form class="search-form" onsubmit="return false;">
+      <input type="text" placeholder="Search products...">
+      <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+    </form>
+
+    <div class="nav-right">
+      <a href="auth/login.html"><span class="fa-solid fa-cart-shopping"></span></a>
+
+      <!-- Menu button -->
+      <button id="menuBtn" onclick="openMenu()" class="menu-button">
+        <i class="fa-solid fa-list"></i>
+      </button>
+    </div>
+  </nav>
+</header>
+
+
+<!-- RIGHT SLIDE MENU -->
+<div id="sideMenu">
+  <button id="closeBtn" onclick="closeMenu()">
+    <i class="fa-solid fa-xmark"></i>
+  </button>
+
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="auth/sin_in.html">Sign In</a></li>
+    <li><a href="auth/contract.html">Contact</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Blog</a></li>
+  </ul>
+</div>
+
+
+<!-- BG Overlay -->
+<div id="overlay" onclick="closeMenu()"></div>
+
+
+<script>
+  function openMenu() {
+    document.getElementById("sideMenu").style.right = "0";
+    document.getElementById("overlay").style.display = "block";
+  }
+
+  function closeMenu() {
+    document.getElementById("sideMenu").style.right = "-250px";
+    document.getElementById("overlay").style.display = "none";
+  }
+</script>
+
+
+
+
+
+
+
 
     <!-- Hero Banner -->
 <section class="promo" 
@@ -308,7 +348,7 @@
         <div>
           <img src="https://i.postimg.cc/pT8gbZqM/download-1.png" alt="Bkash">
           <img src="https://i.postimg.cc/Znx205Gf/download-2.png" alt="Nagad">
-          <img src="https://i.postimg.cc/CxQtRt2V/download.jpg" alt="Rocket">
+.
         </div>
       </div>
     </footer>
