--- a/products/kids/all_together_html.html
+++ b/products/kids/all_together_html.html
@@ -53,18 +53,18 @@
     
     <section class="categories">
         <div class="category">
-            <img src="../kids/pd_img/pd-1.jpg" alt="Air Jordan 4 White">
-            <h4>MINDFUL GREY</h4>
-            <p>MOONBEAM and Sea Salt</p><br>
+            <img src="https://i.postimg.cc/xCFq2Hjr/images-(1).jpg" alt="Air Jordan 4 White">
+            <h4>BABY Collection</h4>
+            <p>Comfortable shoes for kids</p><br>
             <span class="new-price">Tk3499</span>
             <span class="old-price">Tk3999</span>
             <button onclick="addToCart('Air Jordan 4 White')">Add to Cart</button>
         </div>
 
         <div class="category">
-            <img src="https://www.batabd.com/cdn/shop/files/6313196_2_300x.jpg?v=1756803275" alt="Women's Shoes">
-            <h3>Women's Collection</h3>
-            <p>Trendy shoes for women</p><br>
+            <img src="https://i.postimg.cc/50MWF2PB/ty-pink-dewberry-88abaafe-7e67-4dcd-8025-ed4889cdb020-1200x720-crop-bottom.webp" alt="Women's Shoes">
+            <h3>BABY's Collection</h3>
+            <p>Trendy shoes for Baby</p><br>
             <span class="new-price">Tk3499</span>
             <span class="old-price">Tk3999</span>
             <button onclick="addToCart('Women\'s Collection')">Add to Cart</button>
@@ -139,15 +139,15 @@
             <button onclick="addToCart('Girls Kids Sandal')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/Gm1bS4Qf/photo-2024-08-12-10-33-27.jpg" alt="Air Jordan 4">
-            <h4>Air Jordan 4</h4>
+            <img src="https://i.postimg.cc/FzBP3P9w/2e6624e831b7b4ead5a3edebcd7c38fb3b-rsquare-w600.webp" alt="Air Jordan 4">
+            <h4>Best Sneakers for Kids</h4>
             <p>Rubber outsole & lace-up closure sneakers</p><br>
             <span class="new-price">Tk3499</span>
             <span class="old-price">Tk3999</span>
             <button onclick="addToCart('Air Jordan 4')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/Hsmp6J3h/photo-2024-07-09-10-43-32.jpg" alt="Lacoste">
+            <img src="https://i.postimg.cc/L8MBLGdK/41MQWJVmhq-L-AC-UY1000.jpg" alt="Lacoste">
             <h4>Lacoste || Color – Black & White</h4>
             <p>Perfect sportswear collection for trainers, walking, running</p><br>
             <span class="new-price">Tk3499</span>
@@ -155,7 +155,7 @@
             <button onclick="addToCart('Lacoste Black & White')">Add to Cart</button>
         </div>
         <div class="category">
-            <img src="https://i.postimg.cc/hvBqZw8d/photo-2024-08-12-10-17-16.jpg" alt="Air Jordan 4 White">
+            <img src="https://i.postimg.cc/4xmZv2p2/e632d35e-9083-40b3-a3d3-4cd4787ef035.avif" alt="Air Jordan 4 White">
             <h4>Air Jordan 4 || Color – White</h4>
             <p>Exclusive & stylish, perfect for casual outdoor</p><br>
             <span class="new-price">Tk3499</span>
